# oschaemll

./: Makefile  README.md  dune-project  mini_shell.opam  oschaemll.opam
.github/workflows/: ci.yaml
lib/: dune  executor.ml  parser.ml  shell.ml  tokenizer.ml  types.ml
test/: dune  test_shell.ml
